# customer_chat_ai

./: .gitignore  README.md  result_gamma.py
app/: constants.py  main.py
app/ai/: ai_test.py  chat.py  product_crew.py
app/ai_commands/chat_assistant/: ai_bot_instruction.py
app/ai_commands/chat_assistant/actions/: user_services_and_actions.py
app/ai_commands/service_messages/: check_for_available.py
app/ai_commands/service_messages/actions/: user_services_and_actions.py
app/ai_commands/system_messages/: message.py
app/ai_prompts/chat_assistant/: ai_bot_assistant_instruction.py
app/ai_prompts/chat_assistant/actions/: user_services_and_actions.py
app/ai_prompts/crews/latest_ai_development/: Llama3.2Modelfile  create-llama3.2-model-file.sh  pyproject-old.toml  pyproject.toml
app/ai_prompts/crews/latest_ai_development/src/latest_ai_development/: crew.py  main.py
app/ai_prompts/crews/products_crew/: README.md  pyproject.toml  report.md
app/ai_prompts/crews/products_crew/src/products_crew/: crew.py  main.py
app/store/: get_products.py
app/utils/: json_file_converter_to_csv.py  json_object_converter_to_csv.py
