[project]
name = "products_crew"
version = "0.1.0"
description = "products_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0",
    "langchain_groq>=0.1.10,<1.0.0"
]

[project.scripts]
products_crew = "products_crew.main:run"
run_crew = "products_crew.main:run"
train = "products_crew.main:train"
replay = "products_crew.main:replay"
test = "products_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
